# Rokey

./: .gitignore
Auto_Parking_System/: README.md
Auto_Parking_System/Parking_GUI_Android/: README.md
Auto_Parking_System/Parking_GUI_Android/DetectionApp/: build.gradle  settings.gradle
Auto_Parking_System/Parking_GUI_Android/ParkingApp/: build.gradle  local.properties  settings.gradle
Auto_Parking_System/Parking_GUI_Android/bridge_server/: bridge_server.py  requirements.txt
Calibration&Yolo_v11/: README.md  ultralytics_training_tools1.ipynb
Calibration&Yolo_v11/Calibration_Tutorial/: T_gripper2camera.npy  data_recording.py  test.py
Calibration&Yolo_v11/Calibration_Tutorial/data/: calibrate_data.json
Calibration&Yolo_v11/Ultralytics/data/: README.dataset.txt  README.roboflow.txt  data.yaml
Calibration&Yolo_v11/Ultralytics/tools_data1/: README.dataset.txt  README.roboflow.txt  data.yaml
Hub_System/: README.md
Hub_System/input_hub/: package.xml  setup.cfg  setup.py
Hub_System/input_hub/input_hub/: con_to_hub.py
Hub_System/manage_hub/: package.xml  setup.cfg  setup.py
Hub_System/manage_hub/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Hub_System/manage_hub/install/input_hub/share/input_hub/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Hub_System/manage_hub/log/: latest_build
Lane_tracking_auto_driving/: README.md
Lane_tracking_auto_driving/log/: latest_list
Surgery_assisted_cooperative_robot/: README.md
Surgery_assisted_cooperative_robot/pick_and_place_voice/: setup.py
(+3382 files in other folders)
