<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>input_hub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="josh@todo.todo">josh</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>common2</depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
